v1.0.0/modules/schema/pages/class/Register.adoc
= `Register`
:toclevels: 4


+++A device that indicates or records units of the commodity or other quantity measured.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Register`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Register`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
Register {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TimeInterval {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Channel {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDeviceFunction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UsagePoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




Register -> TimeInterval: touTier


Register -> Channel: Channels


Register -> EndDeviceFunction: EndDeviceFunction


Register -> UsagePoint: Usage Point


Register -> DiagramObject: DiagramObjects


Register -> InstanceSet: InstanceSet


Register -> Name: Names


Register -> ChangeSetMember: PropertiesCIMDataObject


Register -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<EndDeviceFunction,`EndDeviceFunction`>>
| 0..1
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]
| +++End device function metering quantities displayed by this register.+++

| <<Usage Point,`Usage Point`>>
| 0..1
| xref::class/UsagePoint.adoc[`UsagePoint`]
| +++Usage Point, when metered, has these registers.+++

| <<isVirtual,`isVirtual`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, the data it produces is  calculated or measured by a device other than a physical end device/meter. Otherwise, any data streams it produces are measured by the hardware of the end device/meter itself.+++

| <<leftDigitCount,`leftDigitCount`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number of digits (dials on a mechanical meter) to the left of the decimal place; default is normally 5.+++

| <<rightDigitCount,`rightDigitCount`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number of digits (dials on a mechanical meter) to the right of the decimal place.+++

| <<touTier,`touTier`>>
| 0..1
| xref::class/TimeInterval.adoc[`TimeInterval`]
| +++Clock time interval for register to beging/cease accumulating time of usage (e.g., start at 8:00 am, stop at 5:00 pm).+++

| <<touTierName,`touTierName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name used for the time of use tier (also known as bin or bucket).  For example, "peak", "off-peak", "TOU Category A", etc.+++

| <<Channels,`Channels`>>
| 0..*
| xref::class/Channel.adoc[`Channel`]
| +++All channels that collect/report values from this register.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Channels]
=== `Channels`
+++All channels that collect/report values from this register.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Register.Channels`
| Cardinality
| 0..*
| Type
| xref::class/Channel.adoc[`Channel`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#EndDeviceFunction]
=== `EndDeviceFunction`
+++End device function metering quantities displayed by this register.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Register.EndDeviceFunction`
| Cardinality
| 0..1
| Type
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#isVirtual]
=== `isVirtual`
+++If true, the data it produces is  calculated or measured by a device other than a physical end device/meter. Otherwise, any data streams it produces are measured by the hardware of the end device/meter itself.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Register.isVirtual`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#leftDigitCount]
=== `leftDigitCount`
+++Number of digits (dials on a mechanical meter) to the left of the decimal place; default is normally 5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Register.leftDigitCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#rightDigitCount]
=== `rightDigitCount`
+++Number of digits (dials on a mechanical meter) to the right of the decimal place.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Register.rightDigitCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#touTier]
=== `touTier`
+++Clock time interval for register to beging/cease accumulating time of usage (e.g., start at 8:00 am, stop at 5:00 pm).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Register.touTier`
| Cardinality
| 0..1
| Type
| xref::class/TimeInterval.adoc[`TimeInterval`]


|===

//[discrete]
[#touTierName]
=== `touTierName`
+++Name used for the time of use tier (also known as bin or bucket).  For example, "peak", "off-peak", "TOU Category A", etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Register.touTierName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#Usage Point]
=== `Usage Point`
+++Usage Point, when metered, has these registers.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Register.Usage%20Point`
| Cardinality
| 0..1
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===


