v1.1.0/modules/schema/pages/class/Register.adoc
= `Register`
:toclevels: 4


+++A device that indicates or records units of the commodity or other quantity measured.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:Register`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`Register`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<Channels,`Channels`>>
//| [[slots_table.Channels]]<<Channels,`Channels`>>
| 0..* +
xref::class/Channel.adoc[`Channel`]
| +++All channels that collect/report values from this register.+++
| _n/a_

| <<EndDeviceFunction,`EndDeviceFunction`>>
//| [[slots_table.EndDeviceFunction]]<<EndDeviceFunction,`EndDeviceFunction`>>
| 0..1 +
xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]
| +++End device function metering quantities displayed by this register.+++
| _n/a_

| <<Usage Point,`Usage Point`>>
//| [[slots_table.Usage Point]]<<Usage Point,`Usage Point`>>
| 0..1 +
xref::class/UsagePoint.adoc[`UsagePoint`]
| +++Usage Point, when metered, has these registers.+++
| _n/a_

| <<isVirtual,`isVirtual`>>
//| [[slots_table.isVirtual]]<<isVirtual,`isVirtual`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, the data it produces is  calculated or measured by a device other than a physical end device/meter. Otherwise, any...+++
| _n/a_

| <<leftDigitCount,`leftDigitCount`>>
//| [[slots_table.leftDigitCount]]<<leftDigitCount,`leftDigitCount`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Number of digits (dials on a mechanical meter) to the left of the decimal place; default is normally 5.+++
| _n/a_

| <<rightDigitCount,`rightDigitCount`>>
//| [[slots_table.rightDigitCount]]<<rightDigitCount,`rightDigitCount`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Number of digits (dials on a mechanical meter) to the right of the decimal place.+++
| _n/a_

| <<touTier,`touTier`>>
//| [[slots_table.touTier]]<<touTier,`touTier`>>
| 0..1 +
xref::class/TimeInterval.adoc[`TimeInterval`]
| +++Clock time interval for register to beging/cease accumulating time of usage (e.g., start at 8:00 am, stop at 5:00 pm).+++
| _n/a_

| <<touTierName,`touTierName`>>
//| [[slots_table.touTierName]]<<touTierName,`touTierName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Name used for the time of use tier (also known as bin or bucket).  For example, "peak", "off-peak", "TOU Category A", etc.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Channels]
=== `Channels`
+++All channels that collect/report values from this register.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Register.Channels`
| Cardinality
| 0..*
| Type
| xref::class/Channel.adoc[`Channel`]


|===

////
[.text-left]
--
<<slots_table.Channels,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#EndDeviceFunction]
=== `EndDeviceFunction`
+++End device function metering quantities displayed by this register.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Register.EndDeviceFunction`
| Cardinality
| 0..1
| Type
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

////
[.text-left]
--
<<slots_table.EndDeviceFunction,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isVirtual]
=== `isVirtual`
+++If true, the data it produces is  calculated or measured by a device other than a physical end device/meter. Otherwise, any data streams it produces are measured by the hardware of the end device/meter itself.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Register.isVirtual`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isVirtual,&#10548;>>
--
////


//[discrete]
[#leftDigitCount]
=== `leftDigitCount`
+++Number of digits (dials on a mechanical meter) to the left of the decimal place; default is normally 5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Register.leftDigitCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.leftDigitCount,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#rightDigitCount]
=== `rightDigitCount`
+++Number of digits (dials on a mechanical meter) to the right of the decimal place.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Register.rightDigitCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.rightDigitCount,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#touTier]
=== `touTier`
+++Clock time interval for register to beging/cease accumulating time of usage (e.g., start at 8:00 am, stop at 5:00 pm).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Register.touTier`
| Cardinality
| 0..1
| Type
| xref::class/TimeInterval.adoc[`TimeInterval`]


|===

////
[.text-left]
--
<<slots_table.touTier,&#10548;>>
--
////


//[discrete]
[#touTierName]
=== `touTierName`
+++Name used for the time of use tier (also known as bin or bucket).  For example, "peak", "off-peak", "TOU Category A", etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Register.touTierName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.touTierName,&#10548;>>
--
////


//[discrete]
[#Usage Point]
=== `Usage Point`
+++Usage Point, when metered, has these registers.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Register.Usage%20Point`
| Cardinality
| 0..1
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.Usage Point,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/Channel.adoc[`Channel`] | xref::class/Channel.adoc#Register[`Register`]



| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`] | xref::class/EndDeviceFunction.adoc#Registers[`Registers`]



| xref::class/UsagePoint.adoc[`UsagePoint`] | xref::class/UsagePoint.adoc#Register[`Register`]


|===

